--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,8 @@ layout: layout
 ---
 
 <div class="content">
-  <div id="post">
-    <h1>{{ post.title }}</h1>
-    {{ content }}
-  </div>
+	<div id="post">
+		<h1>{{ page.title }}</h1>
+		{{ content }}
+	</div>
 </div>
