--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,17 +1,16 @@
 <!DOCTYPE HTML>
-<html>
-
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>{{ page.title }}</title>
 	<meta name="author" content="Gavin Anderegg">
-	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something less boring than nothing.">
+	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 
 <body>
 	<div id="root">
-		<header id="top" class="row">
+		<header id="top">
 			<h1><a href="/">anderegg.ca</a></h1>
 			
 			<nav id="mainNav">
@@ -24,9 +23,9 @@
 		</header>
 		
 		<div id="main">
-			<div id="content">
+			<section id="content">
 				{{content}}
-			</div>
+			</section>
 		</div>
 	</div>
 	
@@ -34,16 +33,13 @@
 		content and design &copy; 2012, Gavin Anderegg &mdash; powered by <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and <a href="http://pages.github.com/">Github Pages</a>
 	</footer>
 	
-	<script type="text/javascript">
-		var _gaq = _gaq || [];
-		_gaq.push(['_setAccount', 'UA-267340-1']);
-		_gaq.push(['_trackPageview']);
-		(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-		})();
+	<script>
+		// var _gaq=[['_setAccount','UA-267340-1'],['_trackPageview']];
+		// (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+		// g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
+		// s.parentNode.insertBefore(g,s)}(document,'script'));
 	</script>
+	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 
 </html>
