Ever so slighlty better

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -5,6 +5,8 @@
 	<title>{{ page.title }}</title>
 	<meta name="author" content="Gavin Anderegg">
 	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="/css/main.css">
 </head>
 
@@ -15,9 +17,9 @@
 			
 			<nav id="mainNav">
 				<ul>
-					<li><a href="/"><span>home</span></a></li>
-					<li><a href="/about">about</a></li>
 					<li><a href="/archives">archives</a></li>
+					<li><a href="/about">about</a></li>
+					<li><a href="/"><span>home</span></a></li>
 				</ul>
 			</nav>
 		</header>
@@ -37,7 +39,7 @@
 		// var _gaq=[['_setAccount','UA-267340-1'],['_trackPageview']];
 		// (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
 		// g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-		// s.parentNode.insertBefore(g,s)}(document,'script'));
+		// s.parentNode.insertBefore(g,s)}(document,'script')); // TODO
 	</script>
 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
