--- a/css/main.css
+++ b/css/main.css
@@ -1,181 +1,1 @@
-* {
-  margin: 0;
-  padding: 0; }
-
-body {
-  color: #DDD;
-  background-color: #2D2C35;
-  background-color: #25252C; }
-
-#top {
-  background-color: #2D2C35;
-  border-bottom: 1px solid #484852; }
-  #top h1 {
-    display: block;
-    text-align: right;
-    font-size: 42px; }
-  #top h1 a {
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    font-weight: normal;
-    color: #FFF;
-    text-decoration: none;
-    -webkit-font-smoothing: antialiased;
-    line-height: 180px; }
-  #top li {
-    display: block;
-    height: 180px;
-    float: left;
-    line-height: 180px; }
-  #top li a {
-    color: #F42;
-    text-decoration: none;
-    padding: 12px 24px;
-    margin-right: 12px;
-    border-radius: 36px;
-    /*	-webkit-box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
-    	-moz-box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
-    	box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);*/
-    /*	border: 1px solid #353340;*/
-    font-family: 'Open Sans', Helvetica, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -webkit-transition: all .15s linear;
-    -moz-transition: all .15s linear;
-    transition: all .15s linear; }
-  #top li a:hover {
-    color: #C30;
-    -webkit-font-smoothing: subpixel-antialiased; }
-
-#mainNav {
-  position: relative;
-  display: block;
-  height: 180px;
-  padding: 68px; }
-
-#content {
-  position: relative;
-  display: block;
-  max-width: 800px;
-  margin: auto;
-  padding: 0 80px;
-  font-family: brawler, georgia, serif;
-  font-size: 18px;
-  line-height: 150%;
-  -webkit-font-smoothing: antialiased;
-  text-shadow: 0px 1px 1px #080812;
-  clear: both; }
-  #content a {
-    color: #F42;
-    -webkit-transition: color .15s linear;
-    -moz-transition: color .15s linear;
-    transition: color .15s linear; }
-  #content a:hover {
-    color: #FC9; }
-  #content img {
-    max-width: 100%; }
-  #content sub, #content sup {
-    line-height: 0; }
-
-article, section {
-  position: relative;
-  display: block;
-  padding: 68px 0;
-  border-bottom: 1px solid #35333C; }
-
-article.last, section.page {
-  border: none; }
-
-#content p {
-  margin: 18px 0; }
-
-#content strong {
-  font-family: 'Open Sans', Helvetica, sans-serif; }
-
-#content h2 {
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-size: 32px;
-  color: #FFF;
-  font-weight: normal;
-  line-height: 132%;
-  margin-bottom: 0; }
-
-#content h3 {
-  display: inline;
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  font-size: 20px;
-  color: #CCC;
-  font-weight: normal;
-  line-height: 132%;
-  margin-top: 0;
-  padding-bottom: 4px;
-  border-bottom: 1px solid #35333C; }
-
-#content ul, #content ol {
-  margin: 18px 0;
-  margin-left: 38px; }
-
-#content div.body {
-  margin: 32px; }
-
-#content p.bottomLink {
-  margin: 0;
-  text-align: right;
-  padding-right: 6px; }
-
-#content img {
-  display: block;
-  margin: auto;
-  border: 2px solid #35333C;
-  -moz-box-shadow: 0 0 4px #000;
-  -webkit-box-shadow: 0 0 4px #000;
-  box-shadow: 0 0 4px #000; }
-
-#bottom {
-  position: relative;
-  display: block;
-  width: 800px;
-  margin: auto;
-  padding: 68px 80px;
-  font-family: 'Open Sans', Helvetica, sans-serif;
-  text-align: right;
-  -webkit-font-smoothing: antialiased; }
-
-@media screen and (max-width: 960px) {
-  #top h1 {
-    position: relative;
-    width: 100%;
-    padding: 0;
-    margin: 0;
-    text-align: right;
-    height: 60px; }
-
-  #top h1 a {
-    line-height: 60px;
-    padding-right: 10%; }
-
-  #mainNav {
-    height: 40px;
-    padding-left: 0;
-    width: 90%;
-    margin: auto; }
-
-  #mainNav ul li {
-    display: block;
-    height: 80px;
-    float: left;
-    line-height: 80px; }
-
-  #content {
-    top: -24px; }
-
-  #content div.body {
-    margin-left: 0;
-    margin-right: 0;
-    font-size: 16px; }
-
-  article, section {
-    padding: 32px 0; }
-
-  #content, #bottom {
-    width: 80%;
-    padding-left: 0;
-    padding-right: 0; } }
+*{margin:0;padding:0}body{color:#DDD;background-color:#25252C;font-family:'Lora', serif;-webkit-font-smoothing:antialiased}body a{color:#F42;-webkit-transition:color .15s linear;-moz-transition:color .15s linear;transition:color .15s linear}body a:hover{color:#FC9}#top{position:relative;background-color:#2D2C35;border-bottom:1px solid #484852;background-image:url(/img/pixels.png);font-family:'Open Sans', Helvetica, sans-serif;height:120px}#top h1 a{display:block;position:absolute;bottom:-12px;right:64px;font-weight:normal;font-size:42px;color:#FFF;text-decoration:none}#top #mainNav{position:absolute;top:24px;right:64px}#top #mainNav li{float:right;list-style:none}#top #mainNav li a{text-decoration:none;padding-left:12px}#top #mainNav li a:hover{color:#FFF}#content{max-width:800px;margin:auto;padding:68px;font-size:18px;line-height:150%;text-shadow:0px 1px 1px #080812;clear:both}#content img{max-width:100%}#content sub,#content sup{line-height:0}article,section{position:relative;display:block;padding:68px 0;border-bottom:1px solid #35333C}article.last,section.page{border:none}#content p{margin:18px 0}#content h1,#content h2,#content h3{font-family:'Open Sans', Helvetica, sans-serif;font-size:32px;color:#FFF;font-weight:normal;line-height:132%;margin-bottom:0}#content h2{display:inline;font-family:'Open Sans', Helvetica, sans-serif;font-size:20px;color:#CCC;font-weight:normal;line-height:132%;margin-top:0;padding-bottom:4px;border-bottom:1px solid #35333C}#content ul,#content ol{margin:18px 0;margin-left:38px}#content div.body{margin:32px}#content p.bottomLink{margin:0;text-align:right;padding-right:6px}#content img{display:block;margin:auto;border:2px solid #35333C;-moz-box-shadow:0 0 4px #000;-webkit-box-shadow:0 0 4px #000;box-shadow:0 0 4px #000}#bottom{position:relative;display:block;max-width:800px;margin:auto;padding:68px 80px;font-family:'Open Sans', Helvetica, sans-serif;text-align:right}
