--- a/css/main.scss
+++ b/css/main.scss
@@ -1,96 +1,13 @@
-*
-{
+* {
 	margin: 0;
 	padding: 0;
 }
 
 body {
 	color: #DDD;
-	background-color: #2D2C35;
 	background-color: #25252C;
-}
-
-#top {
-	background-color: #2D2C35;
-	border-bottom: 1px solid #484852;
-	
-	h1 {
-		display: block;
-		text-align: right;
-		font-size: 42px;
-	}
-	
-	h1 a {
-		font-family: 'Open Sans', Helvetica, sans-serif;
-		font-weight: normal;
-		color: #FFF;
-		text-decoration: none;
-		-webkit-font-smoothing: antialiased;
-		line-height: 180px;
-	}
-	
-	li {
-		display: block;
-		height: 180px;
-		float: left;
-		line-height: 180px;
-	}
-	
-	li a {
-		color: #F42;
-		text-decoration: none;
-		padding: 12px 24px;
-		margin-right: 12px;
-		border-radius: 36px;
-	/*	-webkit-box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
-		-moz-box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);
-		box-shadow: inset 0px 2px 6px 0px rgba(0, 0, 0, 0.2);*/
-	/*	border: 1px solid #353340;*/
-	//	background-color: #25252C;
-		font-family: 'Open Sans', Helvetica, sans-serif;
-		-webkit-font-smoothing: antialiased;
-
-		-webkit-transition: all .15s linear;
-		-moz-transition: all .15s linear;
-		transition: all .15s linear;
-	}
-	
-	li a:hover
-	{
-		color: #C30;
-	//	background-color: #CDCDD8;
-		-webkit-font-smoothing: subpixel-antialiased;
-	}
-}
-
-#mainNav {
-	position: relative;
-	display: block;
-	height: 180px;
-	padding: 68px;
-	
-	
-}
-
-
-
-#main
-{
-//	background-color: #25252C;
-}
-
-#content {
-	position: relative;
-	display: block;
-	max-width: 800px;
-	margin: auto;
-	padding: 0 80px;
-	font-family: brawler, georgia, serif;
-	font-size: 18px;
-	line-height: 150%;
+	font-family: 'Lora', serif;
 	-webkit-font-smoothing: antialiased;
-	text-shadow: 0px 1px 1px #080812;
-	clear: both;
 	
 	a {
 		color: #F42;
@@ -102,6 +19,58 @@ body {
 	a:hover {
 		color: #FC9;
 	}
+}
+
+#top {
+	position: relative;
+	background-color: #2D2C35;
+	border-bottom: 1px solid #484852;
+	background-image: url(/img/pixels.png);
+	font-family: 'Open Sans', Helvetica, sans-serif;
+	height: 120px;
+	
+	h1 a {
+		display: block;
+		position: absolute;
+		bottom: -12px;
+		right: 64px;
+		font-weight: normal;
+		font-size: 42px;
+		color: #FFF;
+		text-decoration: none;
+	}
+	
+	#mainNav {
+		position: absolute;
+		top: 24px;
+		right: 64px;
+		
+		li {
+			float: right;
+			list-style: none;
+		}
+		
+		li a {
+			text-decoration: none;
+			padding-left: 12px;
+		}
+		
+		li a:hover
+		{
+			color: #FFF;
+		}
+	}
+}
+
+
+#content {
+	max-width: 800px;
+	margin: auto;
+	padding: 68px;
+	font-size: 18px;
+	line-height: 150%;
+	text-shadow: 0px 1px 1px #080812;
+	clear: both;
 
 	img {
 		max-width: 100%;
@@ -116,7 +85,7 @@ article, section {
 	position: relative;
 	display: block;
 	padding: 68px 0;
-	border-bottom: 1px solid #35333C;
+	border-bottom: 1px solid #35333C; // TODO
 }
 
 article.last, section.page
@@ -129,14 +98,9 @@ article.last, section.page
 	margin: 18px 0;
 }
 
-#content strong
+#content h1, #content h2, #content h3
 {
-	font-family: 'Open Sans', Helvetica, sans-serif;
-}
-
-#content h2
-{
-	font-family: 'Open Sans', Helvetica, sans-serif;
+	font-family: 'Open Sans', Helvetica, sans-serif; // TODO
 	font-size: 32px;
 	color: #FFF;
 	font-weight: normal;
@@ -144,10 +108,10 @@ article.last, section.page
 	margin-bottom: 0;
 }
 
-#content h3
+#content h2
 {
 	display: inline;
-	font-family: 'Open Sans', Helvetica, sans-serif;
+	font-family: 'Open Sans', Helvetica, sans-serif; // TODO
 	font-size: 20px;
 	color: #CCC;
 	font-weight: normal;
@@ -189,70 +153,14 @@ article.last, section.page
 {
 	position: relative;
 	display: block;
-	width: 800px;
+	max-width: 800px;
 	margin: auto;
 //	background-color: #2D2C35;
 	padding: 68px 80px;
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	text-align: right;
-	-webkit-font-smoothing: antialiased;
 }
 
 @media screen and (max-width: 960px) {
-	#top h1
-	{
-		position: relative;
-		width: 100%;
-		padding: 0;
-		margin: 0;
-		text-align: right;
-		
-		height: 60px;
-	}
 	
-	#top h1 a
-	{
-		line-height: 60px;
-		padding-right: 10%;
-	}
-	
-	#mainNav
-	{
-		height: 40px;
-		padding-left: 0;
-		width: 90%;
-		margin: auto;
-	}
-	
-	#mainNav ul li
-	{
-		display: block;
-		height: 80px;
-		float: left;
-		line-height: 80px;
-	}
-	
-	#content
-	{
-		top: -24px;
-	}
-	
-	#content div.body
-	{
-		margin-left: 0;
-		margin-right: 0;
-		font-size: 16px;
-	}
-	
-	article, section
-	{
-		padding: 32px 0;
-	}
-	
-	#content, #bottom
-	{
-		width: 80%;
-		padding-left: 0;
-		padding-right: 0;
-	}
 }
