--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,9 +2,8 @@
 layout: base
 ---
 
-<div class="content">
-	<div id="post">
-		<h1>{{ page.title }}</h1>
-		{{ content }}
-	</div>
-</div>
+<article>
+					<h1>{{ page.title }}</h1>
+					<h2 class="date">{{ page.date | date: "%B %d, %Y" }}</h2>
+					{{ content }}
+				</article>
