--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
 	<div id="root">
 		<header id="top">
 			<h1><a href="/">anderegg.ca</a></h1>
-			
+
 			<nav id="mainNav">
 				<ul>
 					<li><a href="/archives">archives</a></li>
@@ -23,18 +23,18 @@
 				</ul>
 			</nav>
 		</header>
-		
+
 		<div id="main">
 			<section id="content">
 				{{content}}
 			</section>
 		</div>
 	</div>
-	
+
 	<footer id="bottom">
-		content and design &copy; 2012, Gavin Anderegg &mdash; powered by <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and <a href="http://pages.github.com/">Github Pages</a>
+		content and design &copy; {{ site.time | date: '%Y' }}, Gavin Anderegg &mdash; powered by <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and <a href="http://pages.github.com/">Github Pages</a>
 	</footer>
-	
+
 	<script>
 		var _gaq=[['_setAccount','UA-267340-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
