--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,6 @@
+---
+---
+
 * {
 	margin: 0;
 	padding: 0;
@@ -8,7 +11,7 @@ body {
 	background-color: #25252C;
 	font-family: 'Lora', serif;
 	-webkit-font-smoothing: antialiased;
-	
+
 	a {
 		color: #F42;
 		-webkit-transition: color .15s linear;
@@ -28,7 +31,7 @@ body {
 	background-image: url(/img/pixels.png);
 	font-family: 'Open Sans', Helvetica, sans-serif;
 	height: 120px;
-	
+
 	h1 a {
 		display: block;
 		position: absolute;
@@ -39,24 +42,24 @@ body {
 		color: #FFF;
 		text-decoration: none;
 	}
-	
+
 	#mainNav {
 		position: absolute;
 		top: 32px;
 		right: 64px;
-		
+
 		li {
 			float: right;
 			list-style: none;
 		}
-		
+
 		li a {
 			text-decoration: none;
 			padding: 12px;
 			background-color: rgba(0, 0, 0, 0.4);
 			margin-left: 10px;
 		}
-		
+
 		li a:hover
 		{
 			color: #FFF;
@@ -74,7 +77,7 @@ body {
 	text-shadow: 0px 1px 1px #080812;
 	clear: both;
 	border-bottom: 1px solid #35333C;
-	
+
 	img {
 		max-width: 100%;
 		display: block;
@@ -84,11 +87,11 @@ body {
 		-webkit-box-shadow: 0 0 4px #000;
 		box-shadow: 0 0 4px #000;
 	}
-	
+
 	sub, sup {
 		line-height: 0;
 	}
-	
+
 	article.last, section.page {
 		border: none;
 	}
@@ -96,7 +99,7 @@ body {
 	p {
 		margin: 18px 0;
 	}
-	
+
 	h1, h2, h3 {
 		font-family: 'Open Sans', Helvetica, sans-serif;
 		color: #FFF;
@@ -104,16 +107,16 @@ body {
 		line-height: 132%;
 		margin-bottom: 0;
 	}
-	
+
 	h1 {
 		font-size: 32px;
 	}
-	
+
 	h2 {
 		font-size: 24px;
 		margin-top: 32px;
 	}
-	
+
 	h2.date {
 		font-size: 18px;
 		display: inline;
@@ -123,22 +126,22 @@ body {
 		padding-bottom: 2px;
 		border-bottom: 1px solid #35333C;
 	}
-	
+
 	h3 {
 		margin-top: 32px;
 		font-size: 18px;
 	}
-	
+
 	ul, ol {
 		margin: 18px 0;
 		margin-left: 38px;
 	}
-	
+
 	.readMore {
 		position: relative;
 		display: block;
 		padding: 32px 0;
-		
+
 		a {
 			float: right;
 			text-decoration: none;
