--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>{{ page.title }}</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Gavin Anderegg">
 	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
@@ -13,8 +14,8 @@
 <body>
 	<div id="root">
 		<header id="top">
-			<h1><a href="/">anderegg.ca</a></h1>
-			
+			<h1><a href="/">anderegg.ca </a></h1>
+
 			<nav id="mainNav">
 				<ul>
 					<li><a href="/archives">archives</a></li>
@@ -23,18 +24,18 @@
 				</ul>
 			</nav>
 		</header>
-		
+
 		<div id="main">
 			<section id="content">
 				{{content}}
 			</section>
 		</div>
 	</div>
-	
+
 	<footer id="bottom">
 		content and design &copy; 2012, Gavin Anderegg &mdash; powered by <a href="https://github.com/mojombo/jekyll/">Jekyll</a> and <a href="http://pages.github.com/">Github Pages</a>
 	</footer>
-	
+
 	<script>
 		var _gaq=[['_setAccount','UA-267340-1'],['_trackPageview']];
 		(function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
