--- a/css/main.scss
+++ b/css/main.scss
@@ -150,6 +150,13 @@ body {
 	blockquote {
 		margin: 32px 0 32px 32px;
 	}
+
+	hr {
+		border: none;
+		background: #999;
+		height: 1px;
+		margin: 3em 2em;
+	}
 }
 
 
