Nostalgia + better code formatting

--- a/css/main.scss
+++ b/css/main.scss
@@ -152,6 +152,11 @@ body {
 		margin: 32px 0 32px 32px;
 	}
 
+	code {
+		background: #15151C;
+		padding: 4px;
+	}
+
 	hr {
 		border: none;
 		background: #999;
