--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -33,7 +33,7 @@
 	</div>
 
 	<footer id="bottom">
-		content and design &copy; {{ site.time | date: '%Y' }}, Gavin Anderegg &mdash; powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://pages.github.com/">Github Pages</a>
+		content and design &copy; {{ site.time | date: '%Y' }}, Gavin Anderegg &mdash; powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://pages.github.com/">GitHub Pages</a>
 	</footer>
 </body>
 
