--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@
 body {
 	color: #DDD;
 	background-color: #25252C;
-	font-family: Garamond, Georgia, serif;
+	font-family: Georgia, serif;
 	-webkit-font-smoothing: antialiased;
 
 	a {
@@ -29,7 +29,7 @@ body {
 	background-color: #2D2C35;
 	border-bottom: 1px solid #484852;
 	background-image: url(/img/pixels.png);
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+	font-family: "Helvetica", Arial, sans-serif;
 	height: 120px;
 
 	h1 a {
@@ -98,7 +98,7 @@ body {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+		font-family: "Helvetica", Arial, sans-serif;
 		color: #FFF;
 		font-weight: normal;
 		line-height: 132%;
@@ -170,7 +170,7 @@ body {
 	max-width: 800px;
 	margin: auto;
 	padding: 68px 80px;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif;
+	font-family: "Helvetica", Arial, sans-serif;
 	text-align: right;
 }
 
