--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -7,6 +7,7 @@
 	<meta name="author" content="Gavin Anderegg">
 	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
 	<link rel="stylesheet" href="/css/main.css">
+	<link rel="alternate" type="application/rss+xml" title="anderegg.ca" href="/feed.xml" />
 </head>
 
 <body>
