Making validator.nu happy

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,9 +25,9 @@
 		</header>
 
 		<div id="main">
-			<section id="content">
+			<div id="content">
 				{{content}}
-			</section>
+			</div>
 		</div>
 	</div>
 
