--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -8,6 +8,7 @@
 	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="alternate" type="application/rss+xml" title="anderegg.ca" href="/feed.xml" />
+	<script defer data-domain="anderegg.ca" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
