Adding SEO/OG/Card stuff

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,14 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-	<title>{{ page.title }}</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="author" content="Gavin Anderegg">
-	<meta name="description" content="Personal blog of Gavin Anderegg. Thoughts about technology, the web, programming, and games. Something (slightly) less boring than nothing.">
-	<link rel="stylesheet" href="/css/main.css">
-	<link rel="alternate" type="application/rss+xml" title="anderegg.ca" href="/feed.xml" />
-	<script defer data-domain="anderegg.ca" src="https://plausible.io/js/script.js"></script>
+{% 	seo %}<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="/css/main.css">
+<link rel="alternate" type="application/rss+xml" title="anderegg.ca" href="/feed.xml" />
+<script defer data-domain="anderegg.ca" src="https://plausible.io/js/script.js"></script>
 </head>
 
 <body>
