Trying to remove some indexing errors from GSC

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -15,8 +15,8 @@
 
 			<nav id="mainNav">
 				<ul>
-					<li><a href="/archives">archives</a></li>
-					<li><a href="/about">about</a></li>
+					<li><a href="/archives/">archives</a></li>
+					<li><a href="/about/">about</a></li>
 					<li><a href="/"><span>home</span></a></li>
 				</ul>
 			</nav>
