One line privacy policy?

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -32,7 +32,9 @@
 	<footer id="bottom">
 		<p>Content and design &copy; {{ site.time | date: '%Y' }}, Gavin Anderegg &mdash; powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://pages.github.com/">GitHub Pages</a></p>
 
-		<p style="margin-top: 1em;"><a href="https://mastodon.social/@gavinanderegg" rel="me">Follow me on Mastodon</a></p>
+		<p>This website does not use any cookies. <a href="https://plausible.io/">Plausible.io</a> is used to gather <a href="https://plausible.io/data-policy">anonymized web stats</a></p>
+
+		<p style="margin-top: 1em;"><a href="https://mastodon.social/@gavinanderegg" rel="me">Follow me on Mastodon!</a></p>
 	</footer>
 </body>
 
