--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,6 +16,7 @@
 				<ul>
 					<li><a href="/archives/">archives</a></li>
 					<li><a href="/about/">about</a></li>
+					<li><a href="/projects/">projects</a></li>
 					<li><a href="/"><span>home</span></a></li>
 				</ul>
 			</nav>
