Na na, na na na na na na na na Katamari Damacy!

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -77,11 +77,11 @@ body {
 	border-bottom: 1px solid #35333C;
 
 	img {
-		max-width: 100%;
+		max-width: 90%;
 		display: block;
 		margin: auto;
-		margin: 2.4em 0;
 		height: auto;
+		border: 4px solid darken(#25252C, 10%)
 	}
 
 	sub, sup {
