Strip self-closing tags from seo content

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html lang="en">
 <head>
-{% 	seo %}<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+{% capture seo_tag_output %}
+	{% seo %}
+{% endcapture %}
+{{ seo_tag_output | replace: " />", ">" | replace: "/>", ">" }}<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="alternate" type="application/rss+xml" title="anderegg.ca" href="/feed.xml" />
 <style>{% capture include_to_scssify %}{% include main.scss %}{% endcapture %}{{ include_to_scssify | scssify | strip_newlines }}</style>
