--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -27,7 +27,7 @@ body {
 	background-color: #2D2C35;
 	border-bottom: 1px solid #484852;
 	background-image: url(/img/pixels.png);
-	font-family: "Helvetica", Arial, sans-serif;
+	font-family: "Helvetica", sans-serif;
 	height: 120px;
 
 	h1 a {
@@ -40,31 +40,45 @@ body {
 		color: #FFF;
 		text-decoration: none;
 	}
-
-	#mainNav {
-		position: absolute;
-		top: 32px;
-		right: 64px;
-
-		li {
-			float: right;
-			list-style: none;
-		}
-
-		li a {
-			text-decoration: none;
-			padding: 12px;
-			background-color: rgba(0, 0, 0, 0.4);
-			margin-left: 10px;
-		}
-
-		li a:hover
-		{
-			color: #FFF;
-		}
-	}
 }
 
+#main {
+	display: flex;
+
+	#mainNav {
+		display: flex;
+		width: 200px;
+		font-family: "Helvetica", sans-serif;
+		background: rgba(0, 0, 0, 0.2);
+		border-right: 2px solid rgba(0, 0, 0, 0.4);
+		border-bottom: 2px solid rgba(0, 0, 0, 0.4);
+
+		ul {
+			display: flex;
+			width: 100%;
+			flex-direction: column;
+
+			li {
+				&.active {
+					background: #fff;
+				}
+
+				list-style: none;
+				border: 1px solid #000;
+
+				a {
+					display: block;
+					padding: 2em 1em;
+					text-decoration: none;
+				}
+			}
+		}
+	}
+
+	#content {
+		// display: flex;
+	}
+}
 
 #content {
 	max-width: 800px;
@@ -81,7 +95,7 @@ body {
 		display: block;
 		margin: auto;
 		height: auto;
-		border: 4px solid darken(#25252C, 10%)
+		border: 4px solid darken(#25252C, 10%);
 	}
 
 	sub, sup {
@@ -97,7 +111,7 @@ body {
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		font-family: "Helvetica", Arial, sans-serif;
+		font-family: "Helvetica", sans-serif;
 		color: #FFF;
 		font-weight: normal;
 		line-height: 132%;
@@ -171,7 +185,7 @@ body {
 	max-width: 800px;
 	margin: auto;
 	padding: 68px 80px;
-	font-family: "Helvetica", Arial, sans-serif;
+	font-family: "Helvetica", sans-serif;
 	text-align: right;
 }
 
