--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,18 +10,15 @@
 	<div id="root">
 		<header id="top">
 			<h1><a href="/">anderegg.ca</a></h1>
-
-			<nav id="mainNav">
-				<ul>
-					<li><a href="/archives/">archives</a></li>
-					<li><a href="/about/">about</a></li>
-					<li><a href="/projects/">projects</a></li>
-					<li><a href="/"><span>home</span></a></li>
-				</ul>
-			</nav>
 		</header>
 
 		<div id="main">
+			<nav id="mainNav">
+				<ul>{% for item in site.docs %}
+					<li{% if item.url == page.url %} class="active"{% endif %}><a href="{{ item.url }}">{{ item.title }}</a></li>{% endfor %}
+				</ul>
+			</nav>
+
 			<div id="content">
 				{{content}}
 			</div>
