--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -25,10 +25,10 @@ body {
 #top {
 	position: relative;
 	background-color: #2D2C35;
-	border-bottom: 1px solid #484852;
+	border-bottom: 2px solid #484852;
 	background-image: url(/img/pixels.png);
 	font-family: "Helvetica", sans-serif;
-	height: 86px;
+	height: 68px;
 
 	h1 a {
 		display: block;
@@ -44,38 +44,38 @@ body {
 
 #main {
 	display: flex;
+	flex-direction: column;
 	border-bottom: 2px solid rgba(0, 0, 0, 0.4);
 
 	#mainNav {
 		display: flex;
-		width: 20%;
-		max-width: 186px;
+		width: 100%;
+		max-width: 100%;
 		font-size: 1.1em;
 		font-family: "Helvetica", sans-serif;
-		background: rgba(0, 0, 0, 0.2);
-		border-right: 2px solid rgba(0, 0, 0, 0.4);
+		background: rgba(0,0,0,0.4);
+		border-bottom: 2px solid rgba(0, 0, 0, 0.4);
 
 		ul {
 			display: flex;
+			flex-direction: row;
+			justify-content: center;
 			width: 100%;
-			flex-direction: column;
 
 			li {
+				list-style: none;
+
+				a {
+					display: block;
+					padding: 1.2em 1.4em;
+				}
+
 				&.active {
-					background: #484852;
+					background: rgba(0, 0, 0, 0.6);
 
 					a {
 						color: #FFF;
 					}
-				}
-
-				list-style: none;
-				border-bottom: 2px solid rgba(0, 0, 0, 0.4);
-
-				a {
-					display: block;
-					padding: 2em 1em;
-					text-decoration: none;
 				}
 			}
 		}
@@ -85,7 +85,7 @@ body {
 #content {
 	max-width: 800px;
 	margin: auto;
-	padding: 68px;
+	padding: 2.8em 3em 3em 3em;
 	font-size: 20px;
 	line-height: 156%;
 	text-shadow: 0px 1px 1px #080812;
@@ -183,7 +183,7 @@ body {
 #bottom {
 	font-family: "Helvetica", sans-serif;
 	text-align: right;
-	background-color: rgba(0, 0, 0, 0.4);
+	background: linear-gradient(180deg, rgba(0,0,0,0.4) 0%, rgba(0,0,0,0) 42%);
 
 	.content {
 		margin: auto;
@@ -194,7 +194,7 @@ body {
 @media screen and (max-width: 680px) {
 	#content {
 		font-size: 100%;
-		padding: 24px;
+		padding: 1em 2em 3em 2em;
 	}
 
 	#content article > h2 {
@@ -204,7 +204,7 @@ body {
 	}
 
 	#top {
-		height: 62px;
+		height: 48px;
 
 		h1 a {
 			right: 32px;
@@ -214,25 +214,12 @@ body {
 	}
 
 	#main {
-		flex-direction: column;
-
 		#mainNav {
-			width: 100%;
-			max-width: 100%;
-			border: 0;
-
 			ul {
-				flex-direction: row;
-				justify-content: center;
-				flex-wrap: wrap;
-
 				li {
-
-					display: inline-block;
-					border: 0;
-
 					a {
-						padding: 0.8em 1.2em;
+						font-size: 90%;
+						padding: 1.2em 1.4em 1em 1.4em;
 					}
 				}
 			}
