--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -39,6 +39,7 @@ body {
 		font-size: 42px;
 		color: #FFF;
 		text-decoration: none;
+		text-shadow: 0 0 3px #080812;
 	}
 }
 
@@ -89,7 +90,7 @@ body {
 	padding: 2.8em 3em 3em 3em;
 	font-size: 20px;
 	line-height: 156%;
-	text-shadow: 0px 1px 1px #080812;
+	text-shadow: 0 1px 1px #080812;
 
 	img {
 		max-width: 90%;
