--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,7 +31,7 @@
 
 			<p>This website does not use any cookies. <a href="https://tinylytics.app/">Tinylytics</a> is used to gather anonymized web stats</p>
 
-			<p style="margin-top: 1em;"><a href="https://mastodon.social/@gavinanderegg" rel="me">Follow me on Mastodon</a> <a href="/feed.xml"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 8 8" style="top: 2px; position: relative; padding-left: 8px;"> <style type="text/css">.button {stroke: none; fill: #FF4830;} .symbol {stroke: none; fill: white;}</style><rect class="button" width="8" height="8" rx="1.5" /><circle class="symbol" cx="2" cy="6" r="1" /><path class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" /><path class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" /></svg></a></p>
+			<p style="margin-top: 1em;"><a href="https://mastodon.social/@gavinanderegg" rel="me">Follow me on Mastodon</a> <a href="/feed.xml" aria-label="RSS Feed"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 8 8" style="top: 2px; position: relative; padding-left: 8px;"> <style type="text/css">.button {stroke: none; fill: #FF4830;} .symbol {stroke: none; fill: white;}</style><rect class="button" width="8" height="8" rx="1.5" /><circle class="symbol" cx="2" cy="6" r="1" /><path class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" /><path class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" /></svg></a></p>
 		</div>
 	</footer>
 
