--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,6 +4,6 @@ layout: base
 
 <article>
 					<h2>{{ page.title }}</h2>
-					<h3 class="date">{{ page.date | date: "%B %d, %Y" }}</h3>
+					<h3 class="date">{{ page.date | date: "%B %e, %Y" }}</h3>
 					{{ content }}
 				</article>
