--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -27,6 +27,7 @@ body {
 	background-color: #2D2C35;
 	border-bottom: 4px solid #484852;
 	background-image: url(/img/pixels.png);
+	image-rendering: pixelated;
 	font-family: "Helvetica", sans-serif;
 	height: 68px;
 
