--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,3 +6,9 @@ layout: base
 {{ content }}
 
 <div style="margin-top: 2em;"><h3><a href="/projects/">← Back to Projects</a></h3></div>
+
+<style>
+    #content img {
+        margin: 1.2em auto 1.6em auto;
+    }
+</style>
