--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -90,6 +90,7 @@ body {
 	margin: auto;
 	padding: 2.8rem 3rem 3rem 3rem;
 	font-size: 20px;
+	letter-spacing: 0.02em;
 	line-height: 156%;
 	text-shadow: 0 1px 1px #080812;
 
