Type/links tweaks

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -31,7 +31,7 @@
 		<div class="content">
 			<p>Content and design &copy; {{ site.time | date: '%Y' }}, Gavin Anderegg &mdash; powered by <a href="https://jekyllrb.com/">Jekyll</a> and <a href="https://pages.github.com/">GitHub Pages</a></p>
 
-			<p>This website does not use any cookies. <a href="https://tinylytics.app/">Tinylytics</a> is used to gather anonymized web stats</p>
+			<p>This website does not use any cookies. <a href="https://tinylytics.app/">Tinylytics</a> is used to gather anonymized web stats.<br><a href="https://www.websitecarbon.com/website/anderegg-ca/">Only a tiny amount of energy</a> was used to transmit this content.</p>
 
 			<p style="margin-top: 1em;"><a href="https://mastodon.social/@gavinanderegg" rel="me">Follow me on Mastodon</a> &nbsp;&nbsp;&nbsp; <a href="https://bsky.app/profile/gavin.anderegg.ca" rel="me">Follow me on Bluesky</a> &nbsp; <a href="/feed.xml" aria-label="RSS Feed"><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 8 8" style="top: 2px; position: relative; padding-left: 8px;"> <style type="text/css">.button {stroke: none; fill: #FF4830;} .symbol {stroke: none; fill: white;}</style><rect class="button" width="8" height="8" rx="1.5" /><circle class="symbol" cx="2" cy="6" r="1" /><path class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" /><path class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" /></svg></a></p>
 		</div>
