--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -4,14 +4,16 @@
 }
 
 body {
-	color: #DDD;
+	color: #EEE;
 	background-color: #25252C;
 	font-family: Georgia, serif;
 	-webkit-font-smoothing: antialiased;
 
 	a {
-		// color: #F42; Old colour with accessability issues
-		color: #FF4830;
+		color: #FDC;
+		text-decoration-line: underline;
+		text-decoration-color: #F42;
+		text-decoration-thickness: 0.1em;
 		-webkit-transition: color .15s linear;
 		-moz-transition: color .15s linear;
 		transition: color .15s linear;
@@ -69,6 +71,7 @@ body {
 				list-style: none;
 
 				a {
+					color: #FF4830;
 					display: block;
 					padding: 1.2rem 1.4rem;
 				}
@@ -89,8 +92,7 @@ body {
 	max-width: 800px;
 	margin: auto;
 	padding: 2.8rem 3rem 3rem 3rem;
-	font-size: 20px;
-	letter-spacing: 0.02em;
+	font-size: 22px;
 	line-height: 156%;
 	text-shadow: 0 1px 1px #080812;
 
@@ -192,6 +194,10 @@ body {
 	.content {
 		margin: auto;
 		padding: 64px;
+
+		a {
+			color: #FF4830;
+		}
 	}
 }
 
