Fix for read more

--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -160,9 +160,10 @@ body {
 		padding: 32px 0;
 
 		a {
+			color: #FF4830;
 			float: right;
 			text-decoration: none;
-			padding: 12px;
+			padding: 12px 20px;
 			background-color: rgba(0, 0, 0, 0.4);
 		}
 	}
