--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -109,7 +109,7 @@ body {
 		display: block;
 		margin: auto;
 		height: auto;
-		border: 4px solid darken(#25252C, 10%);
+		border: 4px solid #0e0e10;
 	}
 
 	sub, sup {
