--- a/_includes/main.scss
+++ b/_includes/main.scss
@@ -224,7 +224,7 @@ body {
 
 	#content article > h2 {
 		font-size: 24px;
-		padding-top: 32px;
+		padding-top: 0;
 		padding-bottom: 4px;
 	}
 
@@ -271,7 +271,7 @@ body {
 	padding: 0.6em;
 	background-color: #232323;
 	line-height: 1.4;
-	text-indent: none;
+	text-indent: 0;
 
 	pre {
 		position: relative;
@@ -336,5 +336,48 @@ body {
 	}
 	pre .nt, pre .nc, pre .na {
 		color: #FFC66D;
+	}
+}
+
+#frontPost {
+	@media screen and (max-width: 680px) {
+		padding-top: 32px;
+	}
+
+	h2 a {
+		color: #DDD;
+		text-decoration: none;
+	}
+
+	article {
+		&:last-of-type {
+			padding-bottom: 0;
+
+			hr {
+				display: none;
+			}
+		}
+
+		.readmore {
+			margin: 0;
+		}
+
+		hr {
+			box-sizing: border-box;
+			width: 80%;
+			height: 16px;
+			background: url(/img/pixels.png);
+			image-rendering: pixelated;
+			border-top: 8px solid rgba(0, 0, 0, 0.4);
+			border-left: 8px solid rgba(0, 0, 0, 0.4);
+			margin: 3.2em auto;
+
+			@media screen and (max-width: 680px) {
+				height: 8px;
+				border-top: 4px solid rgba(0, 0, 0, 0.4);
+				border-left: 4px solid rgba(0, 0, 0, 0.4);
+				margin: 2.8em auto;
+			}
+		}
 	}
 }
